--- a/src/renderer/app/components/nav-item/index.module.scss
+++ b/src/renderer/app/components/nav-item/index.module.scss
@@ -39,6 +39,7 @@
   opacity: 0;
   transform: translateY(0);
   transition: transform var(--transition-duration), opacity var(--transition-duration);
+  pointer-events: none;
   z-index: -1;
 }
 
