--- a/src/renderer/app/layouts/sidebar/index.module.scss
+++ b/src/renderer/app/layouts/sidebar/index.module.scss
@@ -1,3 +1,7 @@
 .container {
-
+  position: fixed;
+  width: var(--default-sidebar-width);
+  height: 100%;
+  background-color: var(--bcg-sidebar);
+  min-width: 100px;
 }
