--- a/src/renderer/app/variables.scss
+++ b/src/renderer/app/variables.scss
@@ -3,6 +3,7 @@
   --color-secondary: #d2d2d2;
   --bcg-primary: #212121;
   --bcg-secondary: #232323;
+  --bcg-sidebar: #282828;
   --border-color: #363636;
 
   --color-scroll: rgba(0, 0, 0, 0.15);
@@ -17,6 +18,7 @@
   --transition-duration: 300ms;
 
   --header-height: 34px;
+  --default-sidebar-width: 200px;
 }
 
 html[data-theme="dark"] {
@@ -24,6 +26,7 @@ html[data-theme="dark"] {
   --color-secondary: #d2d2d2;
   --bcg-primary: #151515;
   --bcg-secondary: #232323;
+  --bcg-sidebar: #282828;
   --border-color: #363636;
   --color-scroll: rgba(255, 255, 255, 0.15);
   --color-scroll-hover: rgba(255, 255, 255, 0.3);
