created store. add sidebar resize logic

--- a/src/renderer/app/index.scss
+++ b/src/renderer/app/index.scss
@@ -11,6 +11,13 @@ a {
   text-decoration: inherit;
 }
 
+input {
+  border: none;
+  outline: none;
+  background-color: inherit;
+  color: inherit;
+}
+
 body {
   color: var(--color-primary);
   background-color: var(--bcg-secondary);
