--- a/src/renderer/app/components/sidebar-resizer/index.module.scss
+++ b/src/renderer/app/components/sidebar-resizer/index.module.scss
@@ -6,4 +6,31 @@
   top: 0;
   width: 2px;
   background-color: var(--border-color);
+
+  input {
+    z-index: 2;
+    opacity: 0;
+    position: absolute;
+    left: -20px;
+    right: -20px;
+    text-align: center;
+    border-radius: 4px;
+    padding: 4px 2px;
+    box-shadow: 0 0 4px var(--bcg-secondary);
+    transition-delay: 1000ms;
+    pointer-events: none;
+
+    &:focus {
+      opacity: 1;
+      pointer-events: auto;
+    }
+  }
+
+  &:hover,
+  &:active {
+    input {
+      opacity: 1;
+      pointer-events: auto;
+    }
+  }
 }
