add link to home. change nav item structure

--- a/src/renderer/app/variables.scss
+++ b/src/renderer/app/variables.scss
@@ -9,6 +9,7 @@
   --color-scroll: rgba(0, 0, 0, 0.15);
   --color-scroll-hover: rgba(0, 0, 0, 0.3);
 
+  --aqua: #00cccc;
   --gold: gold;
   --lime: #a4ec13;
   --purple: #8e41ff;
